--- a/src/vista/Paneles/PanelDepositos.form
+++ b/src/vista/Paneles/PanelDepositos.form
@@ -49,7 +49,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="50" y="10" width="510" height="40"/>
+              <AbsoluteConstraints x="30" y="10" width="510" height="40"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -309,7 +309,7 @@
                       <Font name="Roboto" size="36" style="1"/>
                     </Property>
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="33" green="0" red="cc" type="rgb"/>
+                      <Color blue="ad" green="5a" red="12" type="rgb"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="VENCIDO"/>
                   </Properties>
@@ -551,7 +551,7 @@
                       <Font name="Roboto" size="36" style="1"/>
                     </Property>
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="33" green="0" red="cc" type="rgb"/>
+                      <Color blue="ad" green="5a" red="12" type="rgb"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="VENCIDO"/>
                   </Properties>
@@ -793,7 +793,7 @@
                       <Font name="Roboto" size="36" style="1"/>
                     </Property>
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="33" green="0" red="cc" type="rgb"/>
+                      <Color blue="ad" green="5a" red="12" type="rgb"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="VENCIDO"/>
                   </Properties>
@@ -1035,7 +1035,7 @@
                       <Font name="Roboto" size="36" style="1"/>
                     </Property>
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="33" green="0" red="cc" type="rgb"/>
+                      <Color blue="ad" green="5a" red="12" type="rgb"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="VENCIDO"/>
                   </Properties>
@@ -1277,7 +1277,7 @@
                       <Font name="Roboto" size="36" style="1"/>
                     </Property>
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="33" green="0" red="cc" type="rgb"/>
+                      <Color blue="ad" green="5a" red="12" type="rgb"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="VENCIDO"/>
                   </Properties>
@@ -1519,7 +1519,7 @@
                       <Font name="Roboto" size="36" style="1"/>
                     </Property>
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="33" green="0" red="cc" type="rgb"/>
+                      <Color blue="ad" green="5a" red="12" type="rgb"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="VENCIDO"/>
                   </Properties>
@@ -1761,7 +1761,7 @@
                       <Font name="Roboto" size="36" style="1"/>
                     </Property>
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="33" green="0" red="cc" type="rgb"/>
+                      <Color blue="ad" green="5a" red="12" type="rgb"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="VENCIDO"/>
                   </Properties>
@@ -2003,7 +2003,7 @@
                       <Font name="Roboto" size="36" style="1"/>
                     </Property>
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="33" green="0" red="cc" type="rgb"/>
+                      <Color blue="ad" green="5a" red="12" type="rgb"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="VENCIDO"/>
                   </Properties>
@@ -2198,6 +2198,35 @@
             </Container>
           </SubComponents>
         </Container>
+        <Component class="javax.swing.JLabel" name="etiTotal">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Roboto" size="18" style="1"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Total depositos"/>
+          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+          </AuxValues>
+          <Constraints>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+              <AbsoluteConstraints x="150" y="60" width="-1" height="-1"/>
+            </Constraint>
+          </Constraints>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabel2">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Roboto" size="18" style="0"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Importe total:"/>
+          </Properties>
+          <Constraints>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+              <AbsoluteConstraints x="30" y="60" width="-1" height="-1"/>
+            </Constraint>
+          </Constraints>
+        </Component>
       </SubComponents>
     </Container>
   </SubComponents>
