--- a/src/vista/Paneles/PanelDepositos.form
+++ b/src/vista/Paneles/PanelDepositos.form
@@ -105,7 +105,7 @@
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="A&#xd1;ADIR"/>
+                    <Property name="text" type="java.lang.String" value="CONTRATAR"/>
                     <Property name="horizontalTextPosition" type="int" value="0"/>
                   </Properties>
                   <AuxValues>
@@ -223,15 +223,14 @@
                   <Font name="Roboto" size="12" style="0"/>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="9" rowCount="0">
+                  <Table columnCount="8" rowCount="0">
                     <Column editable="false" title="ID" type="java.lang.Object"/>
                     <Column editable="false" title="Dep&#xf3;sito" type="java.lang.Object"/>
-                    <Column editable="false" title="Banco" type="java.lang.Object"/>
+                    <Column editable="false" title="Cuenta" type="java.lang.Object"/>
                     <Column editable="false" title="Fecha Inicio" type="java.lang.Object"/>
-                    <Column editable="false" title="Duraci&#xf3;n (Meses)" type="java.lang.Object"/>
-                    <Column editable="false" title="Importe Inicial" type="java.lang.Object"/>
-                    <Column editable="false" title="Inter&#xe9;s Anual" type="java.lang.Object"/>
-                    <Column editable="false" title="Importe Final Neto" type="java.lang.Object"/>
+                    <Column editable="false" title="Duraci&#xf3;n" type="java.lang.Object"/>
+                    <Column editable="false" title="Importe" type="java.lang.Object"/>
+                    <Column editable="false" title="Inter&#xe9;s" type="java.lang.Object"/>
                     <Column editable="false" title="Finalizado" type="java.lang.Object"/>
                   </Table>
                 </Property>
@@ -316,6 +315,19 @@
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                       <AbsoluteConstraints x="40" y="40" width="170" height="100"/>
+                    </Constraint>
+                  </Constraints>
+                </Component>
+                <Component class="javax.swing.JButton" name="btnPasar1">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Pasar a la Cuenta"/>
+                  </Properties>
+                  <AuxValues>
+                    <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+                  </AuxValues>
+                  <Constraints>
+                    <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+                      <AbsoluteConstraints x="50" y="20" width="-1" height="-1"/>
                     </Constraint>
                   </Constraints>
                 </Component>
